 - New convenience class QQmlApplicationEngine automatically provides
   functionality common in the C++ shell of a primarily QML application.
 - New qmlClearTypeRegistrations() function in qqml.h. This function drops all
   static data generated by previous qmlRegisterType calls.
 - New qmlRegisteredType function in qqml.h, allowing the registration of
   composite types from C++.

QtQuick
------
 - New QML import version QtQuick 2.1 contains no new types, but adds new
   properties, methods and signals to existing types. See the release notes
   in the QtQuick documentation for details.
 - QTBUG-30837: The Flickable type no longer fixes up the content area on
   startup to move it inside the viewport.
 - QTBUG-28086: Remote image URLs now work as a source for AnimatedSprite


****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************
 - New threaded render loop for Mac and Linux should lead to improved
   graphical performance of QtQuick 2 on those platforms.
 - New render loop on Windows should lead to smoother animations.
 - assets: scheme supported on Android for urls inside QML
 - Mac: "@2x" images are now loaded on "retina" systems.

****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Tools                                           *