@@ -85,6 +85,8 @@ QtQml
    static data generated by previous qmlRegisterType calls.
  - New qmlRegisteredType function in qqml.h, allowing the registration of
    composite types from C++.
+ - New baseUrl() accessor in QQmlExtensionPlugin, in case a plugin
+   needs to load QML or other assets from the same directory.
 
 QtQuick
 ------
